--- a/test.yaml
+++ b/test.yaml
@@ -14,13 +14,13 @@ consumes:
 security:
   - basicAuth: []
 paths:
-  /M0X0101:
+  /alu1dx:
     get:
       responses:
         '200':
           description: No response was specified
       tags:
-        - M0X0101_XSS_D
+        - alu1dx_XSS_D
       operationId: findAccounts
       summary: Finds all accounts
   '/hack/hachid/{id}':
